[package]
name = 'chainbridge'
version = '0.0.2'
authors = ['david@chainsafe.io']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

# primitives
sp-std = { branch = "rococo-v1", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { branch = "rococo-v1", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-io = { branch = "rococo-v1", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-core = { branch = "rococo-v1", default-features = false, git = "https://github.com/paritytech/substrate.git" }

# frame dependencies
frame-support = { branch = "rococo-v1", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { branch = "rococo-v1", default-features = false, git = "https://github.com/paritytech/substrate.git" }

pallet-balances = { branch = "rococo-v1", default-features = false, git = "https://github.com/paritytech/substrate.git" }

[build-dependencies]
wasm-builder-runner = { version = "2.0.0", package = "substrate-wasm-builder-runner"}
[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
