[package]
name = 'example-pallet'
version = '0.0.1'
authors = ['david@chainsafe.io']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

# primitives
sp-std = { branch = "rococo-v1", default-features = false }
sp-runtime = { branch = "rococo-v1", default-features = false }
sp-io = { branch = "rococo-v1", default-features = false }
sp-core = { branch = "rococo-v1", default-features = false }
sp-arithmetic = { branch = "rococo-v1", default-features = false }

# frame dependencies
frame-support = { branch = "rococo-v1", default-features = false }
frame-system = { branch = "rococo-v1", default-features = false }

chainbridge = { path = "../chainbridge" , default-features = false}
example-erc721 = { path = "../example-erc721", default-features = false }

[dev-dependencies]
pallet-balances = { branch = "rococo-v1", default-features = false }

[build-dependencies]
wasm-builder-runner = { branch = "rococo-v1", package = "substrate-wasm-builder-runner" }
[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
    "sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"chainbridge/std",
    "example-erc721/std"
]
